--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-essentials-deep-dive-adv",
-  "homepage": "https://reifhel.github.io/tic-tac-toe",
+  "homepage": "https://reifhel.github.io/Tic-Tac-Toe/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
